fix: scrollbar color

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -102,7 +102,7 @@ section {
 }
 
 ::-webkit-scrollbar-thumb {
-	background: $color-grey-dark;
+	background: $color-grey;
 }
 
 // ::-moz-selection {
